[gd_scene load_steps=17 format=3 uid="uid://ctm1vttsid41"]

[ext_resource type="Script" path="res://Player.gd" id="1_a3ur6"]
[ext_resource type="PackedScene" uid="uid://dfx0upuudaqlr" path="res://Pistol.blend" id="2_pa2gy"]
[ext_resource type="Texture2D" uid="uid://cxb4letgoc3o" path="res://addons/kenney_particle_pack/star_06.png" id="3_puw8k"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mhuks"]

[sub_resource type="Gradient" id="Gradient_l8p5i"]
offsets = PackedFloat32Array(0, 0.097561, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fl3uc"]
gradient = SubResource("Gradient_l8p5i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8ktn6"]
gravity = Vector3(0, 0, 0)
angle_min = 45.0
angle_max = 45.0
color = Color(1, 1, 0.505882, 1)
color_ramp = SubResource("GradientTexture1D_fl3uc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xm8pq"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0.584314, 1)
albedo_texture = ExtResource("3_puw8k")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_bex4q"]
material = SubResource("StandardMaterial3D_xm8pq")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_ftagl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uk4mn"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.265017, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.103236, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8qfgm"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.424586, -0.198943, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.561905, -0.1661, -0.5)]
}

[sub_resource type="Animation" id="Animation_yrebc"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.162737, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.445513, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_op4kw"]
_data = {
"RESET": SubResource("Animation_ftagl"),
"idle": SubResource("Animation_uk4mn"),
"move": SubResource("Animation_8qfgm"),
"shoot": SubResource("Animation_yrebc")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_aav5k"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h2s1r"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_a3ur6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_mhuks")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49983, 0)

[node name="Pistol" parent="Camera3D" instance=ExtResource("2_pa2gy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0285119, -0.276251)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_8ktn6")
draw_pass_1 = SubResource("PlaneMesh_bex4q")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.272903, 0, 0, -1.29554)
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_default_blend_time = 0.05
libraries = {
"": SubResource("AnimationLibrary_op4kw")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_aav5k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_h2s1r")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
